avoid word break in http method

--- a/src/components/openapi/HTTPMethod.module.css
+++ b/src/components/openapi/HTTPMethod.module.css
@@ -1,15 +1,15 @@
 .method {
-  color: white;
-  border-radius: 4px;
-  padding: 2px 4px;
-  margin-right: 8px;
-  font-weight: bold;
-  text-decoration: none !important;
-  display: inline-block;
-  min-width: 80px;
-  text-align: center;
+    color: white;
+    border-radius: 4px;
+    padding: 2px 8px;
+    margin-right: 8px;
+    font-weight: bold;
+    text-decoration: none !important;
+    display: inline-flex;
+    text-align: center;
     font-family: var(--ifm-font-family-base);
     flex-shrink: 0;
+    align-items: center;
 }
 
 p .method, li .method {
@@ -19,29 +19,29 @@ p .method, li .method {
 }
 
 .methodDeprecated {
-  background-color: var(--color--gray--600);
+    background-color: var(--color--gray--600);
 }
 
 [data-theme="dark"] .methodDeprecated {
-  background-color: var(--color--gray--800);
+    background-color: var(--color--gray--800);
 }
 
 .methodGET {
-  background-color: var(--ifm-color-success);
+    background-color: var(--ifm-color-success);
 }
 
 .methodPOST {
-  background-color: var(--ifm-color-info);
+    background-color: var(--ifm-color-info);
 }
 
 .methodDELETE {
-  background-color: var(--ifm-color-danger);
+    background-color: var(--ifm-color-danger);
 }
 
 .methodPATCH {
-  background-color: var(--ifm-color-warning);
+    background-color: var(--ifm-color-warning);
 }
 
 .methodPUT {
-  background-color: var(--ifm-color-warning);
+    background-color: var(--ifm-color-warning);
 }
